--- a/admin.css
+++ b/admin.css
@@ -372,37 +372,41 @@ body{
     .banner_class{
         width:100%;
         height: 90vh;
-        text-align: center;
       }
       #banner_photo{
         display: none;
       }
-      #banner_input{
-        margin:3vh 0 0 45%;
-        height: 6vh;
-      }
       .banner_class h2{
+        font-family: 'Acme';
+        color:#2196F3;
+        margin:1% 0 2% 0;
         text-align: center;
+      }
+      .banner_class label{
+        width:14%;
+        height: 13vh;
+        margin:0% 0 3% 43%;
+
+        display: block;
       }
       .banner_class label img{
         cursor: pointer;
-        width:14%;
+        width:100%;
         height: 13vh;
       }
-      .banner_class button{
-        border-radius: 30px;
-        border:0.5px solid #333;
-        outline:0;
-
-      }
       #poster{
-        width:100%;
+        border-radius: 4px;
+        width:98%;
         height:60vh;
-        margin:1% 0 0 0;
+        margin:2% 0 1% 1%;
         background-size: 100% 100%;
+        -webkit-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
+        -moz-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
+        box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
       }
       #poster h1{
-        transform:translateX(-28%);
+        font-family: 'Sofia';
+        margin-left: 33%;
         font-size:8vw;
         color:white;
         text-shadow: 4px 5px 0px rgba(0,0,0,0.53);
@@ -410,6 +414,7 @@ body{
       #banner_text{
         width:30%;
         height:6vh;
+        margin-left:30%;
       }
     /* catalog css */
     .catalog_class {
