--- a/admin.css
+++ b/admin.css
@@ -362,16 +362,38 @@ body{
       width: 100%;
       background-color:white;
     }
+    .customize:hover{
+      -webkit-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
+      -moz-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
+      box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
+        transition: 1s;
+        background-color: #eee;
+        color:#333;
+    }
     .customize{
+      transition: 1s;
       width:20%;
+      height:70%;
       font-size:1.7vw;
       margin:1% 0 0 4%;
       float: left;
+      background-color: #2196F3;
+      color:white;
+      border:0;
+      outline:0;
+      border-radius: 4px;
     }
     /* banner css */
     .banner_class{
         width:100%;
         height: 90vh;
+      }
+      .banner_class button,input{
+        outline: 0;
+        transition: 1s;
+      }
+      .banner_class button{
+        margin-top:-0.5%;
       }
       #banner_photo{
         display: none;
@@ -421,14 +443,23 @@ body{
         width:100%;
         height:70vh;
       }
-      .catalog_class input{
+      .catalog_class input[type="text"]::placeholder{
+        color:#eee;
+      }
+      .catalog_class input[type="text"]{
+        padding-left: 10px;
         margin:5% 0 0 25%;
+        border-radius:3px;
+        border:0;
+        background-color: #2196F3;
+        color:white;
         width:50%;
         height:6vh;
         font-size:1.4vw;
       }
     /* location css */
     .location_class{
+        margin:2% 0 0 0;
         text-align: center;
         width: 100%;
       }
