--- a/style/test_style.css
+++ b/style/test_style.css
@@ -1,17 +1,20 @@
-
+/* THIS IS CATALOG CSS */
 .gallery-cell {
   width: 20%;
   height: 33vh;
   margin-right: 10px;
-  background: gray;
+  background-color: black;
   counter-increment: gallery-cell;
   margin:5% 0 0 0;
+}
+.gallery-cell img{
+    width: 100%;
+    height: 33vh;
 }
   /* cell number */
 .gallery-cell:before {
   display: block;
   text-align: center;
-  content: counter(gallery-cell);
   line-height: 200px;
   font-size: 80px;
   color: white;
@@ -21,24 +24,62 @@
   width: 20%;
   height: 33vh;
   cursor: pointer;
-  background: green;
+  background: #C2C2C2;
+  text-align: center;
+}
+.add_prod_to_catalog button{
+  font-size: 5vw;
+  background: #C2C2C2;
+  margin:14% 0 0 0%;
+  border: none;
+  height: 60%;
+  width: 50%;
+    border-radius: 100px;
+  transition: 0.5s;
+}
+.add_prod_to_catalog button:hover{
+  border-radius: 100px;
+  background: white;
 }
 .flickity-prev-next-button {
   display: inline-block;
   margin:2.5% 0 0 0;
 }
-
+/* THIS IS THE DIV COMES WHEN U CLICK ADD */
+.black_div{
+  background: black;
+  top:0;
+  display: none;;
+  width: 100%;
+  height:200%;
+  opacity: 1;
+  position: absolute;
+  opacity: 0.6;
+}
   .prod_list_to_add{
     position: absolute;
     top:0;
-    background: red;
+    height:auto;
     width: 80%;
-    height: 60vw;
+    background:rgb(84, 82, 82);
     margin-left: 10%;
-    display: none;
+    z-index: 1;
   }
-  .prod_list_to_add img{
-    height: 10vw;
-    width: 10vw;
-
+  .prod_list_to_add button{
+    float: left;
+    height: 5vh;
+    width: 100%;
+  }
+  .gallery_img{
+    height: 55vh;
+    width: 20%;
+    margin: 5vh 0 0 10%;
+    background: white;
+    float: left;
+    overflow:hidden;
+    text-align: center;
+  }
+  .gallery_img img{
+    height: 40vh;
+    width: 15vw;
   }
