--- a/style/test_style.css
+++ b/style/test_style.css
@@ -5,13 +5,15 @@
   margin-right: 10px;
   background-color: black;
   counter-increment: gallery-cell;
-  margin:5% 0 0 0;
+  margin: 5% 0 0 0;
 }
-.gallery-cell img{
-    width: 100%;
-    height: 33vh;
+
+.gallery-cell img {
+  width: 100%;
+  height: 33vh;
 }
-  /* cell number */
+
+/* cell number */
 .gallery-cell:before {
   display: block;
   text-align: center;
@@ -19,7 +21,8 @@
   font-size: 80px;
   color: white;
 }
-.add_prod_to_catalog{
+
+.add_prod_to_catalog {
   margin-top: 5%;
   width: 20%;
   height: 33vh;
@@ -27,59 +30,77 @@
   background: #C2C2C2;
   text-align: center;
 }
-.add_prod_to_catalog button{
+
+.add_prod_to_catalog button {
   font-size: 5vw;
   background: #C2C2C2;
-  margin:14% 0 0 0%;
+  margin: 14% 0 0 0%;
   border: none;
   height: 60%;
   width: 50%;
-    border-radius: 100px;
+  border-radius: 100px;
   transition: 0.5s;
 }
-.add_prod_to_catalog button:hover{
+
+.add_prod_to_catalog button:hover {
   border-radius: 100px;
   background: white;
 }
+
 .flickity-prev-next-button {
   display: inline-block;
-  margin:2.5% 0 0 0;
+  margin: 2.5% 0 0 0;
 }
+
 /* THIS IS THE DIV COMES WHEN U CLICK ADD */
-.black_div{
+.black_div {
   background: black;
-  top:0;
-  display: none;;
+  top: 0;
+  display: none;
+  ;
   width: 100%;
-  height:200%;
+  height: 200%;
   opacity: 1;
   position: absolute;
   opacity: 0.6;
 }
-  .prod_list_to_add{
-    position: absolute;
-    top:0;
-    height:auto;
-    width: 80%;
-    background:rgb(84, 82, 82);
-    margin-left: 10%;
-    z-index: 1;
-  }
-  .prod_list_to_add button{
-    float: left;
-    height: 5vh;
-    width: 100%;
-  }
-  .gallery_img{
-    height: 55vh;
-    width: 20%;
-    margin: 5vh 0 0 10%;
-    background: white;
-    float: left;
-    overflow:hidden;
-    text-align: center;
-  }
-  .gallery_img img{
-    height: 40vh;
-    width: 15vw;
-  }
+
+.prod_list_to_add {
+  position: absolute;
+  top: 0;
+  height: auto;
+  display: none;
+  width: 80%;
+  background: rgb(84, 82, 82);
+  margin-left: 10%;
+  z-index: 1;
+}
+
+.prod_list_to_add button {
+  position: absolute;
+  top:1vh;
+  background-color:#cbcbcb;
+  border-radius: 10px;
+}
+#add_prod_butt {
+  left: 2vw;
+}
+
+#close_products {
+  right: 2vw;
+}
+
+.gallery_img {
+  height: 55vh;
+  width: 20%;
+  margin: 8vh 0 0 10%;
+  background: white;
+  overflow: hidden;
+  float: left;
+  text-align: center;
+}
+
+.gallery_img img {
+  height: 40vh;
+  width: 15vw;
+}
