--- a/add.css
+++ b/add.css
@@ -179,14 +179,14 @@ body{
       display: inline;
     }
     .upload{
-      width:62%;
-      margin-left: 19%;
+      width:15%;
+      height: 15vh;
+      margin:25vh 0 0 25%;
     }
     .upload img{
       cursor: pointer;
-      margin:8vh 0 0 0;
-      width:14%;
-      height: 10vh;
+      width:100%;
+      height: 15vh;
     }
     .add_post input{
       width:25%;
@@ -474,6 +474,98 @@ body{
         width:50%;
         height:6vh;
         font-size:1.4vw;
+      }
+      /* THIS IS CATALOG CSS */
+      .admin_gallery-cell {
+        width: 20%;
+        height: 33vh;
+        background-color: black;
+        counter-increment: gallery-cell;
+        margin: 5% 0 0 0;
+      }
+
+      .admin_gallery-cell img {
+        width: 100%;
+        height: 33vh;
+      }
+
+      .admin_add_prod_to_catalog {
+        margin-top: 5%;
+        width: 20%;
+        height: 33vh;
+        cursor: pointer;
+        background: #C2C2C2;
+        text-align: center;
+      }
+
+      .admin_add_prod_to_catalog button {
+        font-size: 5vw;
+        background: #C2C2C2;
+        margin: 14% 0 0 0%;
+        border: none;
+        height: 60%;
+        width: 50%;
+        border-radius: 100px;
+        transition: 0.5s;
+      }
+
+      .admin_add_prod_to_catalog button:hover {
+        border-radius: 100px;
+        background: white;
+      }
+
+      .admin_flickity-prev-next-button {
+        display: inline-block;
+        margin: 2.5% 0 0 0;
+      }
+
+      /* THIS IS THE DIV COMES WHEN U CLICK ADD */
+      .admin_black_div {
+        background: black;
+        opacity: 0.9;
+        top: 0;
+        display: none;
+        width: 100%;
+        height: 200%;
+        position: absolute;
+      }
+
+      .admin_prod_list_to_add {
+        position: absolute;
+        top: 0;
+        height: auto;
+        display: none;
+        width: 76%;
+        margin-left:6%;
+      }
+
+      .admin_prod_list_to_add button {
+        position: absolute;
+        top:1vh;
+        background-color:#cbcbcb;
+        border-radius: 10px;
+      }
+      #add_prod_butt {
+        left: 2vw;
+      }
+
+      #close_products {
+        right: 2vw;
+      }
+
+      .admin_gallery_img {
+        height: 55vh;
+        width: 20%;
+        margin: 10vh 0 0 4%;
+        background: white;
+        overflow: hidden;
+        float: left;
+        text-align: center;
+      }
+
+      .admin_gallery_img img {
+        height: 40vh;
+        width: 15vw;
       }
     /* location css */
     .location_class{
