--- a/admin.css
+++ b/admin.css
@@ -487,6 +487,26 @@ body{
         margin: 5% 0 0 0;
       }
 
+      .js-flickity{
+        width: 98%;
+        margin-left: 1%;
+      }
+
+.static-banner {
+  position: absolute;
+  background: hsla(0, 0%, 0%, 0.3);
+  z-index: 1;
+  padding: 2px 20px;
+  font-size: 26px;
+  color: white;
+  pointer-events: none;
+}
+
+.static-banner1 {
+  left: 10px;
+  top: 10px;
+}
+
       .admin_gallery-cell img {
         width: 100%;
         height: 33vh;
@@ -534,26 +554,24 @@ body{
       }
 
       .admin_prod_list_to_add {
-        position: absolute;
-        top: 0;
+        position: relative;
+        top:-65vh;
         height: auto;
         display: none;
-        width: 76%;
-        margin-left:6%;
+        width: 100%;
       }
 
       .admin_prod_list_to_add button {
         position: absolute;
-        top:1vh;
         background-color:#cbcbcb;
         border-radius: 10px;
       }
       #add_prod_butt {
-        left: 2vw;
+        left: 3vw;
       }
 
       #close_products {
-        right: 2vw;
+        right: 3vw;
       }
 
       .admin_gallery_img {
@@ -568,7 +586,7 @@ body{
 
       .admin_gallery_img img {
         height: 40vh;
-        width: 15vw;
+        width: 100%;
       }
     /* location css */
     .location_class{
