--- a/admin.css
+++ b/admin.css
@@ -218,12 +218,6 @@ body{
       height:100vh;
       background-color: black;
     }
-    .selectall{
-      text-decoration: none;
-      font-size:1.6vw;
-      text-align: center;
-      color:black;
-    }
     .section_select{
       width:25%;
       height:6vh;
@@ -254,13 +248,70 @@ body{
       left: 0;
     }
 
+    /* FILTER FOR PRODUCT GALLERY */
+    .prod-filter{
+      width:100%;
+      text-align: center;
+    }
+    .selectall{
+      background-color: aqua;
+      text-decoration: none;
+      font-size:1.6vw;
+      text-align: center;
+      color:black;
+    }
+    .sect-filter{
+      border-radius: 4px;
+      width:7%;
+      height:5vh;
+      border:0;
+      outline:0;
+    }
+    .category-filter{
+      width:10%;
+      height:5vh;
+      border-radius: 4px;
+      border:0;
+      outline:0;
+    }
+    .prod-filter input[type="number"]::placeholder{
+      color:white;
+    }
+    .prod-filter input[type="number"]{
+      border:0;
+      outline:0;
+      width:7%;
+      height:5vh;
+      text-align: center;
+      border-radius: 4px;
+    }
+
     /* GALLERY IMG AT PRODUCT */
+    .prod-list{
+      margin:2% 0 0 1%;
+      width:99%;
+      height:69vh;
+      background-color: #eee;
+      position: relative;
+      overflow: scroll;
+    }
+    .gallery_img:hover{
+      transition: 1s;
+      -webkit-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
+      -moz-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
+      box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
+    }
     .gallery_img{
+      cursor: pointer;
       height: 50vh;
       width: 20%;
       background-color: #D4DEDC;
       margin: 10vh 0 0 4%;
       float: left;
+      transition: 1s;
+      -webkit-box-shadow: 0px 0px 2px 0px rgba(0,0,0,0.75);
+      -moz-box-shadow: 0px 0px 2px 0px rgba(0,0,0,0.75);
+      box-shadow: 0px 0px 2px 0px rgba(0,0,0,0.75);
     }
     .gallery_img button{
       height: 5vh;
