--- a/adm.css
+++ b/adm.css
@@ -178,12 +178,12 @@ body{
       height:70vh;
       display: inline;
     }
-    .upload{
+    .upload_product{
       width:15%;
       height: 15vh;
       margin:25vh 0 0 25%;
     }
-    .upload img{
+    .upload_product img{
       cursor: pointer;
       width:100%;
       height: 15vh;
@@ -730,7 +730,13 @@ body{
         text-align: center;
       }
       .upload{
-        margin:7vh 0 0 34vw;
+        margin:7vh 0 0 40%;
+        height: 15vh;
+        width: 20%;
+      }
+      .upload img{
+        height: 15vh;
+        width: 100%;
       }
       .description_input{
         position: absolute;
