--- a/style/product.css
+++ b/style/product.css
@@ -3,7 +3,7 @@ body{
 }
 /* FILTER  */
 #side_menu{
-  background: #FAFAFA;
+  background-color: #F7F7F7;
   width:18%;
   height:100vh;
   position: fixed;
@@ -13,13 +13,12 @@ body{
   font-size: 1.6vw;
 }
 #side_menu select,#side_menu input, #side_menu button{
-    background: #1C1C1E;
+    background-color: #333;
     padding-left: 3%;
     outline: 0;
     border:0;
     border-radius: 10px;
     color:#fff;
-    transition: 1s;
     margin: 15% 0 0 0;
     height:6vh;
   }
@@ -31,7 +30,7 @@ body{
 
 /* SEARCH */
 .search-product{
-  background: #eee;
+  background-color: #eee;
   color:#333;
   border-radius:7px;
   width: 40%;
@@ -39,14 +38,14 @@ body{
   height: 7vh;
   text-align: center;
 }
-.search-product input::placeholder{color:#333;}
+.search-product input::placeholder{color:inherit;}
 .search-product input{
   width: 85%;
-    background: #eee;
+  background-color:transparent  ;
   height: 5vh;
-  margin:1vh 0 0 0.3vw;
+
   font-size:1.4vw;
-  border: none;
+  border: 0;
   outline:0;
   z-index: -1;
 }
@@ -153,3 +152,10 @@ body{
   color: white;
 }
 .pagination a:hover:not(.active) {background-color: #ddd;}
+
+.night-menu{background-color:#5B5B5B;color:#333;}
+.night-menu select{background-color:#eee;}
+.night-product{
+  background-color: #4A4A4B;
+  color:#333;
+}
